docs: add skeleton for Khadas VIM3

--- a/themes/navy/languages/en.yml
+++ b/themes/navy/languages/en.yml
@@ -1,6 +1,7 @@
 menu:
   vim1: VIM1
   vim2: VIM2
+  vim3: VIM3
   edge: Edge
   toneboard: ToneBoard
   firmware: Firmware
@@ -79,7 +80,7 @@ sidebar:
     libreelec_image: LibreELEC
     uboot_image: U-Boot
     dualos_image: Dual OS
-    thirdparty_imgae: Third Party
+    thirdparty_image: Third Party
 
   vim2:
     overview: Beginners Guide
@@ -135,7 +136,57 @@ sidebar:
     libreelec_image: LibreELEC
     uboot_image: U-Boot
     dualos_image: Dual OS
-    thirdparty_imgae: Third Party
+    thirdparty_image: Third Party
+
+  vim3:
+    overview: Beginners Guide
+    getting_started: Getting Started
+    vim3_interfaces: VIM3 Interfaces
+    enter_upgrade_mode: Enter Upgrade Mode
+    upgrade_via_usb: Upgrade Using USB-C Cable
+    upgrade_via_tfcard: Upgrade Android Using SD-Card
+    install_libreelec: Install LibreELEC
+    create_burning_card_via_cli: Create Burning Card Using CLI
+    create_booting_card: Create Booting Card Using CLI
+    booting_card_vs_burning_card: Booting Card Vs Burning Card
+    boot_from_ext_image: Boot From External Media
+    extra_power_input: Extra Power Input
+    gpio_pinout: GPIO Pin-Outs
+    development: Development
+    install_toolchains: Install Toolchains
+    setup_serial: Serial Debugging Tool
+    erase_emmc: Erase eMMC Storage
+    how_to_access_gpio: How To Access GPIO
+    how_to_access_i2c: How To Access I2C
+    uboot: U-Boot
+    uboot_usage: U-boot Usage Guide
+    build_boot_logo_for_uboot: Boot Logo For U-boot
+    setup_tftp: TFTP Server for U-Boot
+    load_image_via_tftp: Load Images with U-Boot via TFTP
+    android: Android
+    download_android_source_code: Download Android Source Code
+    build_android: Build Android Source Code
+    package_update_image: Fast Package Update Image
+    setup_adb: Setup ADB
+    linux: Linux
+    fenix_script: Build Ubuntu/Debian Image
+    how_to_connect_wifi: Connect to Wi-Fi
+    how_to_setup_bluetooth: Setup Bluetooth
+    how_to_setup_watchdog: Setup Watchdog
+    add_chinese_support: Chinese Support
+    install_tensorflow: Install TensorFlow
+    install_docker: Install Docker
+    setup_golang: Setup Golang
+    enable_adb: Enable ADB
+    hardware: Hardware
+    download: Download
+    firmware: Firmware
+    android_image: Android
+    ubuntu_image: Ubuntu
+    libreelec_image: LibreELEC
+    uboot_image: U-Boot
+    dualos_image: Dual OS
+    thirdparty_image: Third Party
 
   edge:
     overview: Beginners Guide
@@ -193,7 +244,7 @@ sidebar:
     dualos_image: Dual OS
     buildroot_image: Buildroot
     uboot_image: U-Boot
-    thirdparty_imgae: Third Party
+    thirdparty_image: Third Party
 
   toneboard:
     getting_started: Getting Started
